필터 1개남음

--- a/roommate/templates/detail.html
+++ b/roommate/templates/detail.html
@@ -17,7 +17,7 @@
 <div>
     <img src="" alt="profile_image">
     <!-- 프로필이미지 -->
-    <p> 기숙사 | 10동 | 남 | 23살 | 2학년 </p> {{survey_ess.room_type}} | {{survey_ess.dormitory_number_man}}동 | {{write_detail.user_id.user_gender}} | {{write_detail.user_id.user_birthyear}} | {{survey_ess.grade}}학년
+    <p> 기숙사 | 10동 | 남 | 23살 | 2학년 </p> {{survey_ess.room_type}} | {{survey_ess.dormitory_number_man}}{{survey_ess.dormitory_number_woman}}동 | {{write_detail.user_id.user_gender}} | {{write_detail.user_id.user_birthyear}} | {{survey_ess.grade}}학년
     <!-- 자신의 정보 -->
 </div>
 <div>
