--- a/checkmate/templates/base.html
+++ b/checkmate/templates/base.html
@@ -37,9 +37,8 @@
             </linearGradient>
             </defs>
             </svg>            
-        <a href="{% url 'main' %}">checkmate</a>
+        <a href="{% url 'main' %}">CHECKMATE</a>
         <!-- 나중에 삭제하겠습니다. -->
-        <a href="{% url 'survey' %}">내정보 입력-임시</a>
     </div>
     <nav>
         <div class="right-menu">
