--- a/checkmate/templates/main.html
+++ b/checkmate/templates/main.html
@@ -5,6 +5,8 @@
 {% endblock %}
 {% block content %}
 <div>
+    <a href="{% url 'survey' %}">내정보 입력-임시</a>
+
         <div class="content-top">
             <div class="text">
                 <h1 class="main-title front-title">나와 딱 맞는</h1>
