--- a/survey/templates/survey.html
+++ b/survey/templates/survey.html
@@ -71,9 +71,9 @@
                     <select name="dormitory-semester-start">
                         <option value="0" selected>----</option>
                         <option value="1" disabled>1학기</option>
-                        <option value="S" disabled>여름방학</option>
-                        <option value="2">2학기</option>
-                        <option value="W">겨울방학</option>
+                        <option value="2" disabled>여름방학</option>
+                        <option value="3">2학기</option>
+                        <option value="4">겨울방학</option>
                     </select>
                     <span>~</span>
                     <select name="dormitory-year-end">
@@ -85,9 +85,9 @@
                     <select name="dormitory-semester-end">
                         <option value="0" selected>----</option>
                         <option value="1">1학기</option>
-                        <option value="S">여름방학</option>
-                        <option value="2">2학기</option>
-                        <option value="W">겨울방학</option>
+                        <option value="2">여름방학</option>
+                        <option value="3">2학기</option>
+                        <option value="4">겨울방학</option>
                     </select>
                 </div>
             </div>
