--- a/account/templates/mypageProfile.html
+++ b/account/templates/mypageProfile.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
-{% load static %}
-
-{% block head %}
-<script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
-
-{% endblock %}
+<head> 
+    {% load static %}
+    {% block head %}
+    <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
+    <link rel="stylesheet" href="{% static 'css/mypage.css' %}">
+    {% endblock %}
+</head>
 
 {% block content %}
 
