--- a/account/templates/register.html
+++ b/account/templates/register.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %}
-{% load static %}
 
+<head> 
+    {% load static %}
+    {% block head %}
+    <link rel="stylesheet" href="{% static 'css/register.css' %}">
+    {% endblock %}
+</head>
 {% block content %}
 <div class="signup">
     <div class="sign_content">
