--- a/checkmate/templates/community.html
+++ b/checkmate/templates/community.html
@@ -1,21 +1,24 @@
 {% extends 'base.html' %}
-{% load static %}
+<head> 
+    {% load static %}
+    {% block head %}
+    <link rel="stylesheet" href="{% static 'css/community,info.css' %}">
+    {% endblock %}
+</head>
 
 {% block content %}
 
-<div>  
-    <h3 class="title">정보 공유 게시판</h3>
+<div class="community">  
+    <h3 class="com_title">정보 공유 게시판</h3>
+    <a id="com_t" href="">인기 게시글</a>
     <div class="com_sub-content">  
-        <a href="">인기 게시글</a>
-        <div class="com_sub-content1">
-            <h5>검색</h5>
-            <form action="" method="get">
-                {% csrf_token %}
-                <input type="text" placeholder="#역세권_오피스텔_어때요?">
-                <button type="submit">검색아이콘</button>
-            </form>
-            <button>+</button>
-        </div> 
+        <h5>검색</h5>
+        <form action="" method="get">
+            {% csrf_token %}
+            <input type="text" placeholder="#역세권_오피스텔_어때요?">
+            <button id="com_submit" type="submit">0</button>
+        </form>
+        <button id="plus_btn">+</button>
     </div>
     <div class="com_content">
         <p id="com_content-info">원룸정보</p>
@@ -23,11 +26,6 @@
         <p id="com_content-body">원룸 리뷰입니다.</p>
     </div>
 
-    <div>
-        <p>원룸정보</p>
-        <p>자취 | 보금자리빌</p>
-        <p>원룸 리뷰입니다.</p>
-    </div>
     <div>
         <ul class="pagination">
             <li class="page-item"><a class="page-link" href="#">◀</a></li>
