--- a/checkmate/templates/mypageScrap.html
+++ b/checkmate/templates/mypageScrap.html
@@ -1,5 +1,10 @@
 {% extends 'base.html' %}
-{% load static %}
+<head> 
+    {% load static %}
+    {% block head %}
+    <link rel="stylesheet" href="{% static 'css/mypage.css' %}">
+    {% endblock %}
+</head>
 
 {% block content %}
 <div class="mypage_container bg">
