--- a/checkmate/templates/base.html
+++ b/checkmate/templates/base.html
@@ -38,7 +38,6 @@
             </defs>
             </svg>            
         <a href="{% url 'main' %}">CHECKMATE</a>
-        <!-- 나중에 삭제하겠습니다. -->
     </div>
     <nav>
         <div class="right-menu">
@@ -63,9 +62,11 @@
             <p class="font-bold">문의처</p>
             <p>경상대학교 멋쟁이사자처럼</p>
         </div>
+        <div>
         <p class="tel">TEL | 055-1234-5678</p>
         <p class="mail">MAIL | likelionGnu@likelion.org</p>
-        <p class="insta"></p>
+        <p class="insta">INSTAGRAM | likelion_gnu</p>
+        </div>
     </footer>
 </body>
 </html>
