--- a/static/css/community,info.css
+++ b/static/css/community,info.css
@@ -1,76 +1,32 @@
-@font-face {
-    font-family: 'yg-jalnan';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_four@1.2/JalnanOTF00.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'S-CoreDream-9Black';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-9Black.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'S-CoreDream-3Light';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-3Light.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'S-CoreDream-6Bold';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-6Bold.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'S-CoreDream-7ExtraBold';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-7ExtraBold.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'S-CoreDream-2ExtraLight';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-2ExtraLight.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'S-CoreDream-5Medium';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-5Medium.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-*{
-    margin: 0;
-    padding: 0;
-}
+
 /* 정보게시판 */
-.community{
+.com_container{
     width: 70vw;
+    height: 70vh;
     margin: 0 auto;
     margin-top: 100px;
 }
-.com_title{
+.com_container h3{
     font-family: Jalnan;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 30px;
-    line-height: 42px;
+    font-size: 40px;
     color: #254074;
-    width: 18vw;
     margin: 0px auto;
+    width: 32vw;
     white-space  : nowrap;
-
 }
+
 .com_sub-content{
     border-bottom: 2px solid #C9C9C9;
-    width:  50vw;
-    margin: 50px auto 0px auto;
+    width:  100%;
+    margin: 100px auto 30px auto;
     display: grid;
-    grid-template-columns: 5vw 40vw 5vw;
+    grid-template-columns: 5vw 50vw 5vw;
+    padding-bottom: 20px;
+    padding-left: 100px;
 }
 
 .com_sub-content input{
+    font-family: 'S-CoreDream-5Medium';
     width: 95%;
     height: 35px;
     padding-left: 15px;
@@ -85,7 +41,8 @@
 }
 #com_t{
     float: right;
-    margin-right: 70px;
+    margin-right: 150px;
+    margin-top: 70px;
     font-size: 15px;
     font-family: 'S-CoreDream-5Medium';
     /* a클릭 없애기 */
@@ -97,16 +54,16 @@
     color: transparent;
 }
 #com_submit{
+    border: 0;
+    outline: 0;
+    background-color:transparent;
     position: relative;
-    left: -40px;
-    width: 30px;
-    height: 30px;
+    left: -30px;
 }
 .com_sub-content h5{
     font-family: Jalnan;
     font-size: 20px;
     color: #254074;
-    margin: 0px;
     padding-top: 5px;
     white-space  : nowrap;
 }
@@ -168,8 +125,6 @@
 }
 .info_container h3{
     font-family: Jalnan;
-    font-style: normal;
-    font-weight: bold;
     font-size: 30px;
     line-height: 42px;
     color: #254074;
@@ -178,8 +133,6 @@
 }
 .hashtag{
     font-family: 'S-CoreDream-7ExtraBold';
-    font-style: normal;
-    font-weight: 800;
     font-size: 15px;
     line-height: 18px;
     letter-spacing: 0.1em;
@@ -191,11 +144,9 @@
 .info_container-box1 input{
     padding-left: 13px;
     font-family: Jalnan;
-    font-style: normal;
-    font-weight: bold;
     font-size: 17px;
-    line-height: 32px;
     letter-spacing: 0.1em;
+    width: 60%;
 }
 
 .info_container input{
@@ -208,18 +159,17 @@
 }
 .info_container button{
     font-family: Jalnan;
-    font-style: normal;
-    font-weight: bold;
     font-size: 15px;
-    line-height: 18px;
     color: #5D94FF;
     border: 2px solid #268AFF;
+    background-color: white;
     box-sizing: border-box;
     border-radius: 10px;
     width: 80px;
     height: 30px;
-    margin-left: 20vw;
-    margin-top: 420px;
+    margin-left: 60vw;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 .info_container-box2{
     display: grid;
@@ -236,11 +186,12 @@
     color: #454545;
 }
 .info_container .body{
-    padding-top: 20px;
+    margin-top: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
     font-family: 'S-CoreDream-3Light';
-    font-style: normal;
-    font-weight: 300;
-    font-size: 13px;
-    line-height: 20px;
+    font-size: 15px;
     border: none;
+    border-bottom: 1px solid #C9C9C9;
+    width: 100%;
 }
