--- a/checkmate/templates/domitoryCommunity.html
+++ b/checkmate/templates/domitoryCommunity.html
@@ -1,53 +1,54 @@
 {% extends 'base.html' %}
 {% load static %}
-
+{% block head %}
+	<link rel="stylesheet" href="{% static 'css/community,info.css' %}">
+{% endblock %}
 {% block content %}
-<h3>기숙사 정보 공유 게시판</h3>
-<div>
-    <a href="">인기 게시글</a>
-    <div>
+<div class="com_container">
+    <h3>기숙사 정보 공유 게시판</h3>
+    <a id="com_t" href="">인기 게시글</a>
+    <div class="com_sub-content">
         <h5>검색</h5>
         <form action="" method="get">
             {% csrf_token %}
             <input type="text" placeholder="#역세권_오피스텔_어때요?">
-            <button type="submit">검색아이콘</button>
+            <button id="com_submit" type="submit">o</button>
         </form>
-        <button onclick="location.href='{% url 'dom_infoWrite' %}'">+</button>
+        <button id="plus_btn" onclick="location.href='{% url 'dom_infoWrite' %}'">+</button>
     </div>
-</div>
 
-{% for post in posts %}     
-<div onclick="location.href='{% url 'domitoryView' post.id %}'">
+    {% for post in posts %}     
+    <div class="com_content" onclick="location.href='{% url 'domitoryView' post.id %}'">
+        
+        {% if post.preface_2 == '정문' or post.preface == '후문' or post.preface == '남문' or post.preface == '호탄' or post.preface == '기타' %}
+        <p class="preface" id="com_content-info">원룸정보</p>
+        <p id="com_content-title">{{ post.preface_2 }}</p>
+        <p id="com_content-body">{{ post.title }}</p>
+        {% else %}
+        <p class="preface" id="com_content-info">{{ post.preface }}</p>
+        <p id="com_content-title">{{ post.preface_2 }}</p>
+        <p id="com_content-body">{{ post.title }}</p>
+        {% endif %}
+        
+    </div>
+    {% endfor %}
 
-    {% if post.preface_2 == '정문' or post.preface == '후문' or post.preface == '남문' or post.preface == '호탄' or post.preface == '기타' %}
-    <p class="preface">원룸정보</p>
-    <p>{{ post.preface_2 }}</p>
-    <p>{{ post.title }}</p>
-    {% else %}
-    <p class="preface">{{ post.preface }}</p>
-    <p>{{ post.preface_2 }}</p>
-    <p>{{ post.title }}</p>
-    {% endif %}
-
-</div>
-{% endfor %}
-
-<div>
-    <ul class="pagination">
-        <li class="page-item"><a class="page-link" href="#">◀</a></li>
-        <li class="page-item"><a class="page-link" href="#">1</a></li>
-        <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-        <li class="page-item"><a class="page-link" href="#">4</a></li>
-        <li class="page-item"><a class="page-link" href="#">5</a></li>
-        <li class="page-item"><a class="page-link" href="#">▶</a></li>
-    </ul>
+    <div>
+        <ul class="pagination">
+            <li class="page-item"><a class="page-link" href="#">◀</a></li>
+            <li class="page-item"><a class="page-link" href="#">1</a></li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item"><a class="page-link" href="#">4</a></li>
+            <li class="page-item"><a class="page-link" href="#">5</a></li>
+            <li class="page-item"><a class="page-link" href="#">▶</a></li>
+        </ul>
+    </div>
 </div>
 <img class="open" id="jsBtn" src="{% static 'img/chat_icon.png' %}" alt="">
 <div class="modal hidden" id="jsModal">
     <button class="modal__closeBtn" id="jsCloseBtn">X</button>
 </div>
-
 
 <script>
     const open = document.querySelector(".open");
