--- a/checkmate/templates/offcampusCommunity.html
+++ b/checkmate/templates/offcampusCommunity.html
@@ -1,49 +1,49 @@
 {% extends 'base.html' %}
 {% load static %}
-
+{% block head %}
+	<link rel="stylesheet" href="{% static 'css/community,info.css' %}">
+{% endblock %}
 {% block content %}
-<div>
-<h3 class="title">자취 정보 공유 게시판</h3>
-<div class="com_sub-content">  
-    <a href="">인기 게시글</a>
-    <div class="com_sub-content1">
-        <h5>검색</h5>
-        <form action="" method="get">
-            {% csrf_token %}
-            <input type="text" placeholder="#역세권_오피스텔_어때요?">
-            <button type="submit">검색아이콘</button>
-        </form>
-        <button onclick="location.href='{% url 'infoWrite' %}'">+</button>
+<div class="com_container">
+    <h3>자취 정보 공유 게시판</h3>
+        <a id="com_t" href="">인기 게시글</a>
+        <div class="com_sub-content">  
+            <h5>검색</h5>
+            <form action="" method="get">
+                {% csrf_token %}
+                <input type="text" placeholder="#역세권_오피스텔_어때요?">
+                <button id="com_submit" type="submit">o</button>
+            </form>
+            <button id="plus_btn" onclick="location.href='{% url 'infoWrite' %}'">+</button>
+        </div>
     </div>
-</div>
 
-{% for post in posts %}     
-<div class="com_content" onclick="location.href='{% url 'offcampusView' post.id %}'">
+    {% for post in posts %}     
+    <div class="com_content" onclick="location.href='{% url 'offcampusView' post.id %}'">
 
-    {% if post.preface_2 == '정문' or post.preface == '후문' or post.preface == '남문' or post.preface == '호탄' or post.preface == '기타' %}
-    <p id="com_content-info" class="preface">원룸정보</p>
-    <p id="com_content-info">{{ post.preface_2 }}</p>
-    <p id="com_content-info">{{ post.title }}</p>
-    {% else %}
-    <p id="com_content-info" class="preface">{{ post.preface }}</p>
-    <p id="com_content-info">{{ post.preface_2 }}</p>
-    <p id="com_content-info">{{ post.title }}</p>
-    {% endif %}
+        {% if post.preface_2 == '정문' or post.preface == '후문' or post.preface == '남문' or post.preface == '호탄' or post.preface == '기타' %}
+        <p id="com_content-info" class="preface">원룸정보</p>
+        <p id="com_content-info">{{ post.preface_2 }}</p>
+        <p id="com_content-info">{{ post.title }}</p>
+        {% else %}
+        <p id="com_content-info" class="preface">{{ post.preface }}</p>
+        <p id="com_content-info">{{ post.preface_2 }}</p>
+        <p id="com_content-info">{{ post.title }}</p>
+        {% endif %}
 
-</div>
-{% endfor %}
-
-<div>
-    <ul class="pagination">
-        <li class="page-item"><a class="page-link" href="#">◀</a></li>
-        <li class="page-item"><a class="page-link" href="#">1</a></li>
-        <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-        <li class="page-item"><a class="page-link" href="#">4</a></li>
-        <li class="page-item"><a class="page-link" href="#">5</a></li>
-        <li class="page-item"><a class="page-link" href="#">▶</a></li>
-    </ul>
-</div>
+    </div>
+    {% endfor %}
+    <div>
+        <ul class="pagination">
+            <li class="page-item"><a class="page-link" href="#">◀</a></li>
+            <li class="page-item"><a class="page-link" href="#">1</a></li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item"><a class="page-link" href="#">4</a></li>
+            <li class="page-item"><a class="page-link" href="#">5</a></li>
+            <li class="page-item"><a class="page-link" href="#">▶</a></li>
+        </ul>
+    </div>
 </div>
 
 <img class="open" id="jsBtn" src="{% static 'img/chat_icon.png' %}" alt="">
