--- a/roommate/templates/searchRoommate.html
+++ b/roommate/templates/searchRoommate.html
@@ -25,6 +25,23 @@
             <input type="button" value="˄" id="up" onclick="hidefilter()" >
             <div id="filter">
                 <form action="">
+                    <div class="filter_state">
+                        <h6 class="title">상태</h6>
+                        <div class="answer">
+                            <input type="radio" id="state" name="state" value="1"><label for="state">매칭중</label>
+                            <input type="radio" id="state" name="state" value="2"><label for="state">매칭완료</label>
+                        </div>
+                    </div>
+                    <div class="essential">
+                        <div class="filter_age">
+                            <h6 class="title">나이</h6>
+                            <div class="answer">
+                                <input type="number" id="age_start" name="age_start">
+                                <span>~</span>
+                                <input type="number" id="age_end" name="age_end">
+                            </div>
+                        </div>
+                    
                     <div class="essential">
                         <div class="filter_grade">
                             <h6 class="title">학년</h6>
@@ -153,12 +170,12 @@
                             <div class="answer">
                                 <select name="cleaning">
                                     <option value="">------</option>
-                                    <option value="0">안함</option>
-                                    <option value="1">한달1회</option>
-                                    <option value="2">격주1회</option>
-                                    <option value="3">주1회</option>
-                                    <option value="4">주3~4회</option>
-                                    <option value="5">매일</option>
+                                    <option value="1">안함</option>
+                                    <option value="2">한달1회</option>
+                                    <option value="3">격주1회</option>
+                                    <option value="4">주1회</option>
+                                    <option value="5">주3~4회</option>
+                                    <option value="6">매일</option>
                                 </select>
                             </div>
                         </div>
@@ -223,12 +240,12 @@
                             <div class="answer">
                                 <select name="toilet">
                                     <option value="">------</option>
-                                    <option value="0">안함</option>
-                                    <option value="1">한달1회</option>
-                                    <option value="2">격주1회</option>
-                                    <option value="3">주1회</option>
-                                    <option value="4">주3~4회</option>
-                                    <option value="5">매일</option>
+                                    <option value="1">안함</option>
+                                    <option value="2">한달1회</option>
+                                    <option value="3">격주1회</option>
+                                    <option value="4">주1회</option>
+                                    <option value="5">주3~4회</option>
+                                    <option value="6">매일</option>
                                 </select>
                             </div>
                         </div>
@@ -309,12 +326,14 @@
             
             <div>
                 <h2>검색</h2>
-                <div>
-                    <input type="text" name="search_keyword" value="{{ search_keyword }}" placeholder="검색어를 입력해주세요">
-                </div>
-                <div>
-                    <button type="submit">검색</button>
-                </div>
+                <form action="">
+                    <div>
+                        <input type="text" name="search_keyword" value="{{ search_keyword }}" placeholder="검색어를 입력해주세요">
+                    </div>
+                    <div>
+                        <button type="submit">검색</button>
+                    </div>
+                </form>
             </div>
         </form>
     </div>
@@ -337,8 +356,8 @@
                 {% if writes %}
                 {% for write in writes.all %}
                 <tr>
-                    <td>{{ write.state}}</td>
-                    <td>{{ write.user_id.survey_ess_id.room_type}}</td>
+                    <td>{{ write.get_state_display}}</td>
+                    <td>{{ write.user_id.survey_ess_id.get_room_type_display}}</td>
                     <td>{{ write.user_id.user_gender}}</td>
                     <!-- 나이모델X학년으로 적어둠 -->
                     <td>{{ write.user_id.survey_ess_id.grade}}학년</td>
