--- a/checkmate/templates/domitoryCommunity.html
+++ b/checkmate/templates/domitoryCommunity.html
@@ -5,16 +5,24 @@
 <h3>기숙사 정보 공유 게시판</h3>
 <div>
     <a href="">인기 게시글</a>
+    {% csrf_token %}
     <div>
-        <h5>검색</h5>
-        <form action="" method="get">
-            {% csrf_token %}
-            <input type="text" placeholder="#역세권_오피스텔_어때요?">
-            <button type="submit">검색아이콘</button>
+        <h2>검색</h2>
+        <form action="">
+            <div>
+                <input type="text" name="search_keyword" value="{{ search_keyword }}" placeholder="#역세권_오피스텔_어때요?">
+            </div>
+            <div>
+                <button type="submit">검색</button>
+            </div>
         </form>
-        <button onclick="location.href='{% url 'dom_infoWrite' %}'">+</button>
     </div>
+    <button onclick="location.href='{% url 'dom_infoWrite' %}'">+</button>
 </div>
+
+{% if search_keyword %}
+<h5> &nbsp; '{{ search_keyword }}' 검색 결과입니다</h5>
+{% endif %}
 
 {% for post in posts %}     
 <div onclick="location.href='{% url 'domitoryView' post.id %}'">
@@ -31,7 +39,13 @@
 
 </div>
 {% endfor %}
-
+{% else %}
+    {% if search_keyword %}
+    일치하는 검색 결과가 없습니다
+    {% else %}
+    작성된 게시글이 없습니다
+    {% endif %}
+{% endif %}
 <div>
     <ul class="pagination">
         <li class="page-item"><a class="page-link" href="#">◀</a></li>
