--- a/checkmate/templates/domitoryCommunity.html
+++ b/checkmate/templates/domitoryCommunity.html
@@ -11,12 +11,15 @@
         <h5>검색</h5>
         <form action="" method="get">
             {% csrf_token %}
-            <input type="text" placeholder="#역세권_오피스텔_어때요?">
+            <input type="text" name="search_keyword" value="{{ search_keyword }}" placeholder="#역세권_오피스텔_어때요?">
             <button id="com_submit" type="submit">o</button>
         </form>
         <button id="plus_btn" onclick="location.href='{% url 'dom_infoWrite' %}'">+</button>
     </div>
-
+    {% if search_keyword %}
+    <h5> &nbsp; '{{ search_keyword }}' 검색 결과입니다</h5>
+    {% endif %}
+    {% if posts %}
     {% for post in posts %}     
     <div class="com_content" onclick="location.href='{% url 'domitoryView' post.id %}'">
         
@@ -32,6 +35,13 @@
         
     </div>
     {% endfor %}
+    {% else %}
+        {% if search_keyword %}
+        일치하는 검색 결과가 없습니다
+        {% else %}
+        작성된 게시글이 없습니다
+        {% endif %}
+    {% endif %}
 
     <div>
         <ul class="pagination">
