--- a/checkmate/templates/dom_infoWrite.html
+++ b/checkmate/templates/dom_infoWrite.html
@@ -23,7 +23,7 @@
 				<option>세부 선택</option>
 			</select>
 			<!-- 말머리 -->
-			<input type="text" placeholder="이곳에 제목을 작성하세요.">
+			<input type="text" name="title" placeholder="이곳에 제목을 작성하세요.">
 			<!-- 정보 게시판 제목 -->
 		</div>
 		<div class="info_container-box2">
