--- a/checkmate/templates/base.html
+++ b/checkmate/templates/base.html
@@ -53,7 +53,7 @@
         <div class="right-menu first">
             <ul>
                 <li><a href="{% url 'searchRoommate' %}">룸메 찾기</a></li>
-                <li><a href="{% url 'offcampusCommunity' %}">정보 공유</a>
+                <li><a href="{% url 'domitoryCommunity' %}">정보 공유</a>
                     <ul class="second">
                         <li id="nav_domitory" onclick="location.href='{% url 'domitoryCommunity' %}'">기숙사 정보</li>
                         <li id="nav_offcampus" onclick="location.href='{% url 'offcampusCommunity' %}'">자취 정보</li>
