--- a/checkmate/templates/offcampusCommunity.html
+++ b/checkmate/templates/offcampusCommunity.html
@@ -26,8 +26,7 @@
         {% for post in posts %}
         <div class="com_content" onclick="location.href='{% url 'offcampusView' post.id %}'">
 
-            {% if post.preface_2 == '정문' or post.preface == '후문' or post.preface == '남문' or post.preface == '호탄' or
-            post.preface == '기타' %}
+            {% if post.preface_2 == '정문' or post.preface == '후문' or post.preface == '남문' or post.preface == '호탄' or post.preface == '기타' %}
             <p id="com_content-info" class="preface">원룸정보</p>
             <p id="com_content-info">{{ post.preface_2 }}</p>
             <p id="com_content-info">{{ post.title }}</p>
@@ -49,7 +48,6 @@
 
 
     </div>
-    {% endfor %}
     <div>
         <ul class="pagination">
             <li class="page-item"><a class="page-link" href="#">◀</a></li>
